--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-Test Page
+<!DOCTYPE html>
+<!--[if lte IE 6]><html class="preIE7 preIE8 preIE9"><![endif]-->
+<!--[if IE 7]><html class="preIE8 preIE9"><![endif]-->
+<!--[if IE 8]><html class="preIE9"><![endif]-->
+<!--[if gte IE 9]><!-->
+<html>
+<!--<![endif]-->
+
+<head>
+    <title>MTG Counter</title>
+
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    
+    <meta name="author" content="Jorden Powley">
+    <meta name="description" content="MTG life counter.">
+    <meta name="keywords" content="magic, gathering, life, counter">
+
+    <!-- Include Stylesheets & Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link rel="stylesheet" href="/public/css/app.css">
+</head>
+
+<body>
+    <div id="app">
+
+    </div>
+
+    <!-- Include Scripting -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.7.0/umd/react.production.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.7.0/umd/react-dom.production.min.js" type="text/javascript"></script>
+    <script src="/public/js/app-min.js" type="text/javascript"></script>
+</body>
+
+</html>
